// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Carousel rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-carousel ant-carousel-rtl css-var-root"
>
  <div
    class="slick-slider slick-initialized"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
        style="opacity: 1; -webkit-transform: translate3d(0px, 0px, 0px); transform: translate3d(0px, 0px, 0px);"
      />
    </div>
  </div>
</div>
`;

exports[`Carousel should works for dotPosition bottom 1`] = `
<div
  class="ant-carousel css-var-root"
>
  <div
    class="slick-slider slick-initialized"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
        style="opacity: 1; -webkit-transform: translate3d(0px, 0px, 0px); transform: translate3d(0px, 0px, 0px);"
      >
        <div
          aria-hidden="false"
          class="slick-slide slick-active slick-current"
          data-index="0"
          style="outline: none; width: 0px;"
          tabindex="-1"
        >
          <div>
            <div
              style="width: 100%; display: inline-block;"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel should works for dotPosition left 1`] = `
<div
  class="ant-carousel ant-carousel-vertical css-var-root"
>
  <div
    class="slick-slider slick-vertical slick-initialized"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
        style="opacity: 1; -webkit-transform: translate3d(0px, 0px, 0px); transform: translate3d(0px, 0px, 0px);"
      >
        <div
          aria-hidden="false"
          class="slick-slide slick-active slick-current"
          data-index="0"
          style="outline: none; width: 0px;"
          tabindex="-1"
        >
          <div>
            <div
              style="width: 100%; display: inline-block;"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel should works for dotPosition right 1`] = `
<div
  class="ant-carousel ant-carousel-vertical css-var-root"
>
  <div
    class="slick-slider slick-vertical slick-initialized"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
        style="opacity: 1; -webkit-transform: translate3d(0px, 0px, 0px); transform: translate3d(0px, 0px, 0px);"
      >
        <div
          aria-hidden="false"
          class="slick-slide slick-active slick-current"
          data-index="0"
          style="outline: none; width: 0px;"
          tabindex="-1"
        >
          <div>
            <div
              style="width: 100%; display: inline-block;"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel should works for dotPosition top 1`] = `
<div
  class="ant-carousel css-var-root"
>
  <div
    class="slick-slider slick-initialized"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
        style="opacity: 1; -webkit-transform: translate3d(0px, 0px, 0px); transform: translate3d(0px, 0px, 0px);"
      >
        <div
          aria-hidden="false"
          class="slick-slide slick-active slick-current"
          data-index="0"
          style="outline: none; width: 0px;"
          tabindex="-1"
        >
          <div>
            <div
              style="width: 100%; display: inline-block;"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
